name:                hnfs
version:             0.1.0.0
synopsis:            Haskell bindings to libnfs - https://github.com/sahlberg/libnfs
license:             LGPL-2.1
license-file:        LICENSE
author:              Arne Redlich <arne.redlich@googlemail.com>
maintainer:          Arne Redlich <arne.redlich@googlemail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
stability:	     Experimental

library
  default-language:    Haskell2010
  exposed-modules:     System.Nfs
  hs-source-dirs:      src
  build-depends:       base >=4.5, unix, bytestring, statvfs, clock
  build-tools:	       c2hs
  includes:	       nfsc/libnfs.h
  extra-libraries:     nfs
  extra-lib-dirs:      /usr/local/lib
  ghc-options:	       -Wall

test-suite NfsTest
  default-language:	Haskell2010
  type:			exitcode-stdio-1.0
  build-depends:	base >= 4.5, tasty, tasty-hunit, hnfs, unix, bytestring, statvfs, clock
  hs-source-dirs:	test
  main-is:		NfsTest.hs

executable hnfs-tester
  default-language:	Haskell2010
  hs-source-dirs:	hnfs-tester
  main-is:		Main.hs
  build-depends:	base >=4.5, tasty, tasty-hunit, hnfs, unix, bytestring, statvfs, clock, cmdargs >= 0.10.7
  ghc-options:	       -Wall -threaded
