name:                hnfs
version:             0.1.0.0
synopsis:            Haskell bindings to libnfs - https://github.com/sahlberg/libnfs
license:             LGPL-2.1
license-file:        LICENSE
author:              Arne Redlich <arne.redlich@googlemail.com>
maintainer:          Arne Redlich <arne.redlich@googlemail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
stability:	     Experimental

library
  default-language:    Haskell2010
  exposed-modules:     System.Nfs
  hs-source-dirs:      src
  build-depends:       base >=4.5,
                       bytestring,
                       clock,
                       statvfs,
                       unix
  build-tools:	       c2hs
  includes:	       nfsc/libnfs.h
  extra-libraries:     nfs
  extra-lib-dirs:      /usr/local/lib
  ghc-options:	       -Wall

test-suite NfsTest
  default-language:	Haskell2010
  type:			exitcode-stdio-1.0
  build-depends:	base >= 4.5,
                        bytestring,
                        clock,
                        hnfs,
                        statvfs,
                        tasty >= 0.8,
                        tasty-hunit >= 0.8.0.1,
                        unix
  hs-source-dirs:	test
  main-is:		NfsTest.hs

executable hnfs-tester
  default-language:	Haskell2010
  hs-source-dirs:	hnfs-tester
  main-is:		Main.hs
  build-depends:	base >=4.5,
                        bytestring,
                        clock,
                        either >= 4.1.1,
                        hnfs,
                        statvfs,
                        tagged >= 0.7,
                        tasty >= 0.8,
                        tasty-hunit >= 0.8.0.1,
                        transformers >= 0.3.0.0,
                        unix,
                        uuid >= 1.3.3
  ghc-options:	       -Wall -threaded
