name:                hnfs
version:             0.1.0.0
synopsis:            NFS client library
description:         hnfs is a NFS client library based on <https://github.com/sahlberg/libnfs libnfs>.
license:             LGPL-2.1
license-file:        LICENSE
author:              Arne Redlich <arne.redlich@googlemail.com>
maintainer:          Arne Redlich <arne.redlich@googlemail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
stability:	     Experimental

library
  default-language:    Haskell2010
  exposed-modules:     System.Nfs,
                       Data.Conduit.Nfs
  hs-source-dirs:      src
  build-depends:       base >=4.5,
                       bytestring,
                       clock,
                       conduit >= 1.1.0,
                       filepath >= 1.3.0.1,
                       resourcet >= 1.1.0,
                       statvfs,
                       transformers >= 0.3.0.0,
                       unix
  build-tools:	       c2hs
  includes:	       nfsc/libnfs.h
  extra-libraries:     nfs
  extra-lib-dirs:      /usr/local/lib
  ghc-options:	       -Wall -threaded

executable hnfs-tester
  default-language:	Haskell2010
  hs-source-dirs:	hnfs-tester
  main-is:		Main.hs
  build-depends:	base >=4.5,
                        bytestring,
                        clock,
                        conduit >= 1.1.0,
                        either >= 4.1.1,
                        epoll >= 0.2.3,
                        filepath >= 1.3.0.1,
                        hnfs,
                        lifted-base >= 0.2.2.1,
                        mtl >= 2.1.2,
                        resourcet >= 1.1.0,
                        statvfs,
                        tagged >= 0.7,
                        tasty >= 0.8,
                        tasty-hunit >= 0.8.0.1,
                        transformers >= 0.3.0.0,
                        unix,
                        uuid >= 1.3.3
  ghc-options:	       -Wall -threaded
